--- a/templates/activite/index.html.twig
+++ b/templates/activite/index.html.twig
@@ -3,10 +3,10 @@
 {% block title %}Activite index{% endblock %}
 
 {% block body %}
-    <h1>Activite index</h1>
+    <h1 class="text-center m-2">Activite index</h1>
 
-    <table class="table">
-        <thead>
+    <table class="table table-hover">
+        <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
@@ -14,7 +14,7 @@
                 <th>actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody >
         {% for activite in activites %}
             <tr>
                 <td>{{ activite.id }}</td>
