--- a/templates/activite/show.html.twig
+++ b/templates/activite/show.html.twig
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('activite_index') }}">back to list</a>
+    <a href="{{ path('activite_index') }}" class="d-inline-block m-2">back to list</a>
 
-    <a href="{{ path('activite_edit', {'id': activite.id}) }}">edit</a>
+    <a href="{{ path('activite_edit', {'id': activite.id}) }}" class="d-inline-block m-2">edit</a>
 
     {{ include('activite/_delete_form.html.twig') }}
 {% endblock %}
