--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Activites
+                        <a class="nav-link" href="/activite">Activites
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
