--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,13 @@
             </div>
         </div>
     </nav>
-        {% block body %}{% endblock %}
+        {% block body %}
+
+            {% for message in app.flashes('edit_success') %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% endblock %}
     </body>
 </html>
