--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,7 +19,7 @@
                     {% endif %}
                     <h1 class="h3 mb-3 font-weight-normal text-center">Please sign in</h1>
                     <div class="col-12 col-lg-6 offset-lg-3">
-                        <label for="inputUsername">Email</label>
+                        <label for="inputUsername">Username</label>
                         <input type="text" name="username" value="{{ last_username }}" id="inputUsername" autocomplete="username" class="form-control" required autofocus>
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-3">
