--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarButtonsExample">
                 <!-- Left links -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    {% if app.session.get('connected') == 'true' and app.session.get('isAdmin') == 'false' %}
+                    {% if app.session.get('connected') == 'true' %}
                     <li class="nav-item ">
                         <a class="nav-link text-white" href="{{ path('mes_activites') }}">Mes activites</a>
                     </li>
@@ -48,7 +48,7 @@
                         Login
                     </a>
                     {% else %}
-                        <a href="{{ path('app_logout') }}" class="btn btn-info">
+                        <a href="{{ path('app_logout') }}" class="btn btn-danger">
                             Logout
                              </a>
                     {% endif %}
