--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -41,5 +41,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_new') }}">Create new</a>
+    <div class="w-100 d-flex justify-content-center mb-3">
+        <a href="{{ path('user_new') }}" class="btn btn-primary">Create new</a>
+    </div>
 {% endblock %}
