--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -30,9 +30,11 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <div class="w-100 d-flex justify-content-center ">
+        <a href="{{ path('user_index') }}" class="btn btn-dark mx-2">back to list</a>
 
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+        <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-primary mx-2">edit</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+        {{ include('user/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
